# SAGA

./: .gitignore  CMakeLists.txt  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup_cuda.py  setup_native.py
.github/workflows/: ci.yml
configs/: config.yaml  evaluate.yaml
configs/cluster/: a100_32gpu.yaml  a100_64gpu.yaml  single_node.yaml
configs/experiment/: ablation.yaml  bfsdfs.yaml  competitive.yaml  demo.yaml  e2e_main.yaml  fairness.yaml  sensitivity.yaml  tool_variance.yaml
configs/scheduler/: llumnix.yaml  saga.yaml  sglang.yaml  vllm.yaml  vllm_apc.yaml
configs/workload/: burst_gpt.yaml  swe_bench.yaml  web_arena.yaml
csrc/: saga_native.cpp
csrc/cuda/: compact_pool.cu  migration.cu  paged_attention_walru.cu  prefetch_stream.cu  prefix_overlap.cu  saga_cuda.h  saga_cuda_pybind.cpp  walru_score_cuda.cu
docs/: DATA.md  EXPERIMENTAL_DETAILS.md  TROUBLESHOOTING.md
paper/Source/: hpdc26-25.tex  saga-hpdc2026.bib
src/: __init__.py  native.py
src/analysis/: metrics.py  stats.py
src/cache/: ttl.py
src/entrypoints/: __init__.py  bench_native.py
src/integrations/: __init__.py  langchain.py
src/saga/: __version__.py  cli.py  native.py  presets.py
src/saga/analysis/: __init__.py  metrics.py  tables.py
src/saga/cache/: __init__.py  dram_tier.py  manager.py  policies.py  ttl.py
src/saga/core/: __init__.py  aeg.py  types.py
src/saga/entrypoints/: bench_native.py  bench_wallclock.py  benchmark.py  evaluate.py  simulate.py
src/saga/fairness/: __init__.py  afs.py
src/saga/integrations/: autogen.py  crewai.py  langchain.py
src/saga/scheduler/: coordinator.py  routing.py  stealing.py  strategies.py
src/saga/serving/: __init__.py  cuda.py  engine.py  errors.py
src/saga/serving/benchmarks/: __init__.py  paper_numbers.py  runner.py
src/saga/serving/distributed/: __init__.py  cluster_spec.py  coordinator.py  grpc_coordinator.py  grpc_worker.py  ray_cluster.py  worker.py
src/saga/serving/distributed/proto/: __init__.py  saga_coordinator.proto
src/saga/serving/vllm_ext/: __init__.py  llama3_70b.py  paged_attention.py  prefill_decode.py  v1_engine.py
src/saga/sim/: __init__.py  cluster.py  engine.py  events.py
src/saga/utils/: seeds.py
src/saga/workflow/: __init__.py  analyzer.py  pattern.py
src/saga/workload/: __init__.py  base.py  burst_gpt.py  swe_bench.py  web_arena.py
src/scheduler/: __init__.py  routing.py
src/utils/: __init__.py  logging.py
tests/: conftest.py  test_aeg.py  test_afs.py  test_cache_policies.py  test_cli_show.py  test_dram_tier.py  test_engine.py  test_integrations.py  test_native.py  test_paper_fidelity.py  test_routing.py  test_serving_benchmarks.py  test_serving_cuda.py  test_serving_distributed.py  test_serving_vllm_ext.py  test_stealing.py  test_strategies.py  test_ttl.py  test_workflow.py  test_workload.py
