[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saga-sched"
dynamic = ["version"]
description = "SAGA: Workflow-Atomic Scheduling for AI Agent Inference on GPU Clusters"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = [
    "GPU cluster scheduling",
    "distributed inference serving",
    "compound AI systems",
    "workflow scheduling",
    "KV cache management",
    "AI agents",
    "LLM serving",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
    "pandas>=2.0,<3.0",
    "hydra-core>=1.3.2,<2.0",
    "omegaconf>=2.3,<3.0",
    "pydantic>=2.5,<3.0",
    "rich>=13.7,<15.0",
    "typer>=0.9,<1.0",
    "tqdm>=4.66,<5.0",
    "networkx>=3.1,<4.0",
    "tabulate>=0.9,<1.0",
    "pyyaml>=6.0,<7.0",
    "typing-extensions>=4.9,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<7.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-timeout>=2.2,<3.0",
    "hypothesis>=6.92,<7.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.8,<2.0",
    "types-PyYAML",
    "types-tabulate",
    "types-tqdm",
]
docs = [
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "mkdocstrings[python]>=0.24,<1.0",
]

# Full cluster path: vLLM v0.6.0 + Ray 2.9 + gRPC + torch 2.1 + HF tokenizers.
# Pins match the paper's Llama-3-70B serving stack on 64x A100-80GB.
serving = [
    "vllm==0.6.0",
    "ray>=2.9.0,<3.0",
    "grpcio>=1.60,<2.0",
    "grpcio-tools>=1.60,<2.0",
    "torch>=2.1.2",
    "transformers>=4.40,<5.0",
    "huggingface-hub>=0.20,<1.0",
    "protobuf>=4.25,<6.0",
    "pybind11>=2.11,<3.0",
]

all = ["saga-sched[dev,docs]"]
all-serving = ["saga-sched[dev,docs,serving]"]

[project.scripts]
saga = "saga.cli:app"
saga-simulate = "saga.entrypoints.simulate:main"
saga-benchmark = "saga.entrypoints.benchmark:main"
saga-evaluate = "saga.entrypoints.evaluate:main"
saga-bench-native = "saga.entrypoints.bench_native:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["saga*"]

[tool.setuptools.dynamic]
version = {attr = "saga.__version__.__version__"}

[tool.setuptools.package-data]
"saga" = ["py.typed", "*.yaml", "*.json"]

# Ruff lint + format
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM",
    "TID", "RUF", "PTH", "PL",
]
ignore = [
    "E501",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLR0911",
    "PLW2901",
    "RUF002",
    "RUF005",
    "RUF007",
    "RUF012",
    "RUF046",
    "B007",
    "B017",
    "N806",
    "SIM105",
    "B008",
    "B028",
    "PLC0415",
    "PLR0904",
    "PLR0917",
    "PLW0603",
    "N818",
    "PTH207",
]

[tool.ruff.lint.isort]
known-first-party = ["saga"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "PLR0912", "PLR0915"]
"src/saga/entrypoints/*" = ["PLR0915"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "hydra.*", "omegaconf.*", "scipy.*", "networkx.*",
    "tabulate.*", "pandas.*",
]
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
    "integration: end-to-end simulator tests",
    "unit: focused unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 120

# Coverage
[tool.coverage.run]
source = ["src/saga"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/entrypoints/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
